--- a/09.html
+++ b/09.html
@@ -17,24 +17,10 @@
 			ctx.width=400;
 			ctx.lineWidth=.5;
 
-			ctx.beginPath();
-			ctx.rect(100,100,200,300);
-			ctx.strokeStyle="#EF3636";
-			ctx.fillStyle="#49FF4D";
-			ctx.stroke();
+			
+			ctx.moveTo(200,200);
+			ctx.arc(200,200,100, -90*Math.PI/180, -30*Math.PI/180,true);
 			ctx.fill();
-
-			ctx.beginPath();
-			ctx.fillStyle="#1A41DA";
-			ctx.fillRect(0,0,200,200);
-
-			ctx.beginPath();
-			ctx.fillStyle="#E4CCCC";
-			ctx.strokeStyle="#FFB226";
-			ctx.lineWidth=10;
-			ctx.strokeRect(30,30,100,100);
-
-
 
 		</script>
 	</body>
